DFR-2100 refactored manage case documents